@@ -24,7 +24,7 @@
 	lv2:port [
 		a lv2:InputPort, lv2atom:AtomPort ;
 		lv2atom:bufferType lv2atom:Sequence ;
-		lv2atom:supports lv2midi:MidiEvent ;
+		lv2atom:supports lv2midi:MidiEvent, lv2time:Position ;
 		lv2:index 0 ;
 		lv2:symbol "in";
 		lv2:name "MIDI In";
